# auth-service-rs

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  bacon.toml  buf.gen.yaml  buf.yaml  build.rs
.cargo/: config.toml
.github/: copilot-instructions.md
.github/instructions/: cicd.instructions.md  dockerfile.instructions.md  proto.instructions.md  sql.instructions.md  (+1 more)
.sqlx/: query-0d424caceca36ef4f03609d4a5641ce3002ec23a499273d7d4d734c687b6bc89.json  query-12c638fca27ff0f3845a18b8dd814ce73bfbb4264db7e6bf31e90fae32d36cdf.json  query-3708758ef9e552cf9f6434af36df1346ea394b2e5e4206449d7feb4b3cb6812d.json  query-4e90b9b0b94ba4cc58d5debb9acabfa09d725e7cc92f7278c59b4b032eb73a41.json  query-5de861539b8faa92e11fb27fd8080033cb55feeec5b48e1e09562af6c7393a7f.json  query-628b097392168f1c7cb041ac96ba7e50a4ec7d39d533e6a42371f347b33225e8.json  query-68746b5ea8fb4bad3f2e3c2adaedede30a53d60196a5b97d5ab5d7fddddd2762.json  query-6fed46ce2a52281723fe3862b6f75e546ae180f9684f6fc76b91e6369afe1a4b.json  query-72387f81f30b7d3c02c53f7c4d86b6a7482aa9f3fc0c11c5044aedcb18c74078.json  query-774be08b13ac832030816142ebc8544c98183610bd4c47fe515f12b45467da0a.json  query-7b3519332b8efcb48f8d08e22fa46e76530e2f44b5acbc98d532d28c7fe3226f.json  query-7c5f2905d0bd3192951856f912917e9c027e0f61c8c2789f05dc0f57ba9dcf93.json  query-8322fbff46a4e542f28db1dbf90bfd84fa0c3b7e7ac578b5345af63405e1e888.json  query-8fd3108a664ce906e04de01ea07903d87fc44b24b64282a81ce098ab8f2a7432.json  query-999623174f2b53c40b7153f774be4c7742f58c7098ec3a66cca4abed522cbcf5.json  query-a1003af53a37b4ce2fd32ac28034644936ae108a336800b9f52dd3bc317b6e00.json  query-aad4728309f1152bd2d3d3b50d2622738631ee43fe5f505e03d169261dfbe180.json  query-b6a6a2ea56765c02d0efb4522a96578ac64311f1409df4bcece2a719af0d86e9.json  query-b9c1ff237e820d9f290902e19e8957dbf5216e050e0a69950216df97e2963ef8.json  query-c49af972599d22df3e9bbc00aaeca03af460e4be0952d9f35cdecd0bcb403921.json  query-c631d93e56af84b1d03b88afe348562db9506117f9282b34f2e27647b3b6d2a3.json  query-ce208666d2570e10216826f6a8800712d5c2349549e041d11aaa6fb0318b93f0.json  query-f2be3c57f2ae57db0ce9a6ac74d75c3aba36ca007ab50398e6742b83654caf03.json  query-f574095ae0800bd8ee649397aaf2caf3a9670ff6edfd0f1fc2aadd7b07c0e3cb.json  query-f825310212bfb71f74ea18435b0dd339236cd0c6d16f89be0609305c1048e458.json  query-fd4a819230e7aab104c87bc3150980ec8b06fbf31eab8c49f511c61296e009ff.json
configs/: .env.example  production.env
crates/core/: Cargo.toml
crates/core/src/: error.rs  jwt.rs  lib.rs  proto_ext.rs  request_ext.rs  str_ext.rs  validation.rs
crates/db/: Cargo.toml
crates/db/.sqlx/: query-09cc8841ebd99de6ba30b54fd3d3eeeb6e4f17ab2b0fe923546c7b2bb3e0f53c.json  query-10fceb1c2c954815a68c0c85f0d210f3eebbebce88c02949ec266dfc9bc02f34.json  query-1f7dfa5c3bb8b68c2ce5b77843744b8022ebda0d8f689ff236c05e6a413fd3c1.json  query-213db2e2f310f996875265de39ce84d7462a1b49424ae44b82650787bfbe328a.json  query-30c889544c0b2d5c7ee3afd44547a3af7c98496833703daee1ccc486105241af.json  query-39d7e7c32127813887c7d33d25752d28592bd9c9c0914d1fad958e6a485a790d.json  query-411d1838e59645578c3053aafb2616e762a73552e8309cec4b687c04ff3a788c.json  query-4be02e20df80c0fbe61fa3a64ecab1b146f77c168db1665f1742c8710fb1da0e.json  query-65e0928f25dd94ddc93af5b7663b1312ead3af43b769df4a207b6d2287755b64.json  query-66d8f91291494ca69492bac62b5fd7dea277990fbb182d5cce90ebf867bbbd56.json  query-6d5796fab2dffb9b195b4084b7e14ca1d94de026aea18bba88b3beb3935c9d3d.json  query-6e4ac1c0a93217c6320874596209ad4881835bdcd8924d2d7958656e1edc303c.json  query-703f823b5f6fa0768c7544f04e935f41faabb72b184253d4ae94f464568dbe35.json  query-70d501bdc85b04fc40fa92c599432fc63329dd6e35496a0970c77f6c8698ef30.json  query-7b9579481f50b4ac3b2f9bc62c716181fd5b5ef816dce0b2672922b36a662621.json  query-854865c766f1a8788bcdb7ce5c1cf7c8187a14e5a184773a1ee434f6d5313284.json  query-8c4a05d3c6e07c378a2a1b44bde813cb8e4e25e90df9d6e6a34e12f245c4db11.json  query-a39c50fffea3bd0814a81d55bfe71078e515b6841615401cb43d24ea780dadff.json  query-a96799410bb29d46070ef5dde27d281598a74e572d28b8bf43c10a1a10a81007.json  query-ab892f5074ce1ec68bd38f64b0421776774f5b810657f7d580e639933fc40206.json  query-addeac1901ac52286a741a56a60f3a2f4dda01a7293aaadf4e8b8f0fa76b0f9f.json  query-afacd1ffda7f51eb05ae43face51d93163836367abe87b062aa30bc91e680c7e.json  query-bfd2cac43e737c1296105f78c089d6f0ec462e8d974bc0a534eebd5323c12142.json  query-d309144e005aa99f7e820e13fcd92a3028f9d4659ba3c05ad8149104cb30db7b.json  query-d43bb40de3b12d76a44ed5be84ff93be07d2e98d0ec19a39e071a8b0a8a39b1f.json  query-e3ac38a8d8c00578906d11904e78d8e3ca74272c43c31296af5f453cf8a7d118.json  query-e583d86dbd1172c9750435c176eb69ef1231549e4620ff2ade5b13b6b2d614bc.json  query-e996e02d7c85e3ecf10df1840300dce75c0afc70e705b7f00f1eaa6bbb814ba5.json  query-ebac911c08ab18ee6369eda6cf7e06a8b44dceab3fb6c3b1530c03b82e148ca4.json  query-f0cc9d3e5e59ee769d9749e161ac979feb7e701c7af908bdca6f3130ad794637.json  query-f33371125d9dfb90cce79651647ea69e5127de9641311c2325d3d42d9b97ac8f.json  query-f8db715cb01e19819665f5c6bd0d5cde56f657092fc50a380cec4c035572d3b9.json  query-fada81d3aa96859d9d92607ed96afe536b3abcc54dad66653b94da024656d6f1.json
crates/db/migrations/: 20260121000000_session_device_unique_index.sql
crates/db/sql/: db.sql
crates/db/src/: lib.rs  models.rs  repository.rs
crates/db/src/repository/: config.rs  email_verification.rs  mod.rs  oauth_state.rs  password_reset.rs  session.rs  user.rs
crates/email/: Cargo.toml
crates/email/src/: lib.rs  templates.rs
crates/mailjet/: Cargo.toml
crates/mailjet/src/: lib.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: lib.rs  rest.rs  serde_wkt.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  s3.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
deploy/: Dockerfile  Dockerfile.arm  app.stack.yml  s3-backup-rw-iam-policy.json  s3-cors.xml  s3-token-iam-policy.json
docs/: ARTICLE.md
proto/: auth.proto  core.proto  users.proto
src/: config.rs  error.rs  extensions.rs  lib.rs  main.rs  routes.rs  startup.rs  telemetry.rs  validation.rs
(+81 files in other folders)
