[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"
authors = ["Auth Service Team"]
description = "Authentication gRPC service written in Rust"
rust-version = "1.85"

[[bin]]
name = "auth-service"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = "0.1"

# gRPC & protobuf
tonic = { version = "0.14", features = ["gzip", "transport"] }
tonic-prost = "0.14"
tonic-web = "0.14"
tonic-health = "0.14"
tonic-reflection = "0.14"
prost = "0.14"
prost-types = "0.14"
prost-validate = { version = "0.2", features = ["derive"] }

# HTTP/Tower stack
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
http = "1.4"
axum = { version = "0.8", default-features = false, features = ["json", "tokio", "http1", "http2"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros"] }

# Authentication
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
argon2 = "0.5"
secrecy = { version = "0.10", features = ["serde"] }

# Streaming
async-stream = "0.3"

# Utilities
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
rand = "0.9"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "chrono"] }
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32"

# Configuration
clap = { version = "4.5", features = ["derive", "env"] }

# S3 storage
aws-sdk-s3 = "1.86"
aws-credential-types = "1.2"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

[build-dependencies]
tonic-prost-build = "0.14"
prost-build = "0.14"
prost-validate-build = "0.2"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
