[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[package]
name = "auth-service"
version = "0.1.0"
edition.workspace = true
authors = ["Auth Service Team"]
description = "Authentication gRPC service written in Rust"
rust-version.workspace = true

[[bin]]
name = "auth-service"
path = "src/main.rs"

[dependencies]
# Workspace crates
auth-core = { path = "crates/core" }
auth-db = { path = "crates/db" }
auth-proto = { path = "crates/proto" }
auth-storage = { path = "crates/storage" }
auth-telemetry = { path = "crates/telemetry" }

# Async runtime
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = "0.1"

# gRPC & protobuf
tonic = { version = "0.14", features = ["gzip", "transport"] }
tonic-web = "0.14"
tonic-health = "0.14"
tonic-reflection = "0.14"

# HTTP/Tower stack
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
http = "1.4"
axum = { version = "0.8", default-features = false, features = ["json", "tokio", "http1", "http2"] }

# Static hash sets (compile-time perfect hash)
phf = { version = "0.11", features = ["macros"] }

# Authentication
argon2 = "0.5"
secrecy = { version = "0.10", features = ["serde"] }

# Streaming
async-stream = "0.3"

# Utilities
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
serde = { version = "1.0", features = ["derive"] }

# Configuration
clap = { version = "4.5", features = ["derive", "env"] }

# URL encoding
urlencoding = "2.1"

# Observability (re-exported from auth-telemetry, but needed for macros)
tracing = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lints]
workspace = true
