[package]
name = "auth-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Shared core types, traits, and error handling for auth services"

[features]
default = ["jwt"]
jwt = ["jsonwebtoken", "secrecy", "chrono", "rand", "base64", "serde", "sha2"]

[dependencies]
# Error handling
thiserror = "2.0"

# gRPC
tonic = { version = "0.14" }
tonic-types = "0.14"
prost = "0.14"
prost-types = "0.14"
prost-validate = { version = "0.2", features = ["derive", "tonic"] }

# Utilities
uuid = { version = "1.20", features = ["v4", "serde"] }
serde_json = "1.0"

# Tracing
tracing = "0.1"

# JWT (optional, enabled by default)
jsonwebtoken = { version = "10.2", features = ["rust_crypto"], optional = true }
secrecy = { version = "0.10", features = ["serde"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"], optional = true }
rand = { version = "0.9", optional = true }
base64 = { version = "0.22", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
sha2 = { version = "0.10", optional = true }

[lints]
workspace = true
