[package]
name = "auth-mailjet"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Mailjet email provider for auth-service"

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
secrecy = "0.10"

[lints]
workspace = true
