[package]
name = "auth-proto"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Generated protobuf code for auth service"

[dependencies]
# Core (for proto extension traits)
auth-core = { path = "../core" }

# gRPC & protobuf
tonic = { version = "0.14", features = ["gzip", "transport"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
prost-validate = { version = "0.2", features = ["derive"] }
uuid = "1"

# Serde for JSON serialization (REST/SSE endpoints)
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }

# Required by prost-validate derive macro for pattern validation
regex = "1"

[build-dependencies]
tonic-prost-build = "0.14"
prost-build = "0.14"
prost-validate-build = "0.2"

[lints]
workspace = true
