[package]
name = "auth-storage"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "S3/object storage abstraction for auth services"

[dependencies]
# Core
auth-core = { path = "../core" }

# AWS S3
aws-sdk-s3 = "1.86"
aws-credential-types = "1.2"
aws-smithy-types = "1.3"

# Utilities
uuid = { version = "1.16", features = ["v4"] }

# Tracing
tracing = "0.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
